# OpenGL-Ray-Trace-demo

./: .gitignore  CMakeLists.txt  PLAN.md  PLAN2.md  PLAN3.md  README.md  TASKS.md  update.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/render/: RenderWidget.cpp  RenderWidget.h  Renderer.cpp  Renderer.h
src/render/glsl/: denoise.comp.glsl  fullscreen.frag.glsl  fullscreen.vert.glsl  raytrace.comp.glsl
src/scene/: BvhBuilder.cpp  BvhBuilder.h  SceneData.cpp  SceneData.h
